--- a/client/stylesheets/twitterClone.css
+++ b/client/stylesheets/twitterClone.css
@@ -45,8 +45,21 @@
   margin-bottom: 15px;
 }
 
-.col-center-block {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.followBox {
+  background-color: rgb(240, 247, 254);
+}
+
+.follow-container {
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+.follow-container .found-user {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.follow-container h5 {
+  color: gray;
 }
