--- a/client/templates/userManagment.html
+++ b/client/templates/userManagment.html
@@ -1,18 +1,3 @@
-<head>
-  <title>twitterClone</title>
-</head>
-
-<body>
-  <div class="row">
-    <div class="col-md-2 col-sm-2">
-      {{> userManagement}}
-    </div>
-    <div class="col-md-4 col-sm-4">
-      {{> tweetBox}}
-    </div>
-  </div>
-</body>
-
 <template name="userManagement">
   <div class="user-container">
     <div class="panel panel-default userBox">
@@ -24,7 +9,7 @@
 
         {{else}}
         <!-- Log in module -->
-        <h5>Already signed up?</h5>
+        <h4>Already have an account?</h4>
         <div class="form-group">
           <input class="form-control input-sm" id="login-username" placeholder="Username">
           <input class="form-control input-sm" id="login-password" placeholder="Password" type="password">
@@ -34,7 +19,7 @@
 
 
         <!-- Sign up module -->
-        <h5>New User?</h5>
+        <h4>New User?</h4>
         <div class="form-group">
           <input class="form-control input-sm" id="signup-username" placeholder="Username">
           <input class="form-control input-sm" id="signup-fullname" placeholder="Full Name (Optional)">
@@ -43,31 +28,6 @@
 
         <button type="button" class="btn btn-info fullbutton" id="signup">Sign up</button>
         {{/if}}
-
-      </div>
-    </div>
-  </div>
-</template>
-
-
-
-<template name="tweetBox">
-  <div class="tweetbox-container">
-    <div class="panel panel-default tweetbox">
-      <div class="panel-body">
-        <!-- Text box for tweet content -->
-        <textarea class="form-control" id="tweetText" placeholder="What's happening?" rows="3"></textarea>
-
-        <!-- Character count & button -->
-        <div class="pull-right btnGroup">
-          <strong class="{{charClass}}">{{charCount}}</strong>
-
-          {{#if currentUser}}
-          <button class="btn btn-info pull-right" type="button" {{disableButton}}>Tweet</button>
-          {{else}}
-          <button class="btn btn-info pull-right" type="button" disabled>Please Log In</button>
-          {{/if}}
-        </div>
 
       </div>
     </div>
