--- a/client/templates/userManagment.html
+++ b/client/templates/userManagment.html
@@ -6,7 +6,19 @@
         <!-- Message for logged in user -->
         <p>Hello <strong>@{{currentUser.username}}</strong>, welcome to twitterClone</p>
         <button type="button" class="btn btn-info fullbutton" id="logout">Log out</button>
-
+        <table class="table">  
+          <tr>
+            <td class="tableHeader">Tweets</td>
+            <td class="tableHeader">Following</td>
+            <td class="tableHeader">Followers</td>
+          </tr>
+          <tr>
+            <td class="tableContent">{{tweets}}</td>
+            <td class="tableContent">{{following}}</td>
+            <td class="tableContent">{{followers}}</td>
+          </tr>
+        </table>
+        
         {{else}}
         <!-- Log in module -->
         <h4>Already have an account?</h4>
@@ -28,6 +40,8 @@
 
         <button type="button" class="btn btn-info fullbutton" id="signup">Sign up</button>
         {{/if}}
+
+
 
       </div>
     </div>
