--- a/client/stylesheets/twitterClone.css
+++ b/client/stylesheets/twitterClone.css
@@ -49,6 +49,10 @@
   background-color: rgb(240, 247, 254);
 }
 
+.followBox {
+  background-color: rgb(240, 247, 254);
+}
+
 .follow-container {
   margin-top: 30px;
   margin-left: 30px;
@@ -62,4 +66,13 @@
 
 .follow-container h5 {
   color: gray;
+}
+
+.tweetfeed {
+  background-color: rgb(240, 247, 254);
+}
+
+.tweetfeed-container {
+  margin: 30px;
+  margin-left: 10px;
 }
